FIX button text wrapping ref #6

--- a/src/assets/styles/app/_app.scss
+++ b/src/assets/styles/app/_app.scss
@@ -98,6 +98,7 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
+  white-space: nowrap;
   box-shadow: 0px 4px 10px hsla(0, 0%, 0%, 0.9);
   transition: all .5s ease;
 
